--- a/src/templates/other.html
+++ b/src/templates/other.html
@@ -69,6 +69,8 @@
 <br />
 
 <input type="button" class="btn_funcs" id="unlock_net" value="解锁软件网络限制" onclick="doget_use_func('unlock_net')">
+<br />
+<input type="button" class="btn_funcs" id="unlock_usb_beta" value="[Beta] 停止USB管控服务" onclick="doget_use_func('unlock_usb')">
 
 	</body>
 </html>
