新功能添加Ui
先写一点~~ 明天还要出去玩~

--- a/src/static/bruh.css
+++ b/src/static/bruh.css
@@ -118,6 +118,17 @@ p {
 		
 	}
 
+	#dhl_4 {
+		float: left;
+		line-height: 60px;
+		text-align: center;
+		width: 100px;
+		
+		background-color: darkgray;
+		cursor: pointer;
+
+		
+	}
 
 #main {
 	
