--- a/src/templates/ToolBox.html
+++ b/src/templates/ToolBox.html
@@ -62,12 +62,20 @@
 	<p>广播管理</p>
 	
 	</div>
+
+	<div id="dhl_4" onmouseover="dhl_on_jiaodian(this)" onmouseleave="dhl_on_likai(this)" onclick="dhl_jump_page('sp')">
+		
+		<p>特殊</p>
+		
+	</div>
+
 </div>
 
 <div id="main">
 
 <p>点击选项卡以开始使用!</p>
 <p>出现排版异常可以试着刷新页面！</p>
+<h2 style="margin-left: 5px;">注: V10.5.0.2558版本的噢易可以尝试使用*特殊*选项卡中的功能</h2>
 <br />
 
 <p>由笨比ZiHao独自一人开发</p>
