--- a/src/templates/other.html
+++ b/src/templates/other.html
@@ -46,6 +46,14 @@
 	<p>广播管理</p>
 	
 	</div>
+
+	<div id="dhl_4" onmouseover="dhl_on_jiaodian(this)" onmouseleave="dhl_on_likai(this)" onclick="dhl_jump_page('sp')">
+		
+		<p>特殊</p>
+		
+	</div>
+
+
 </div>
 
 <div id="main">
