--- a/src/templates/ProGress.html
+++ b/src/templates/ProGress.html
@@ -62,6 +62,10 @@ cursor: default;
 <p>有时自动刷新不管事(摊手)</p>
 <br />
 
+<input type="button" class="btn_funcs" id="REgetoepath" value="重新获取学生端路径" onclick="doget_use_func_with_wait('reflashOEPath')">
+
+<br>
+
 <p>学生端根服务状态 >> {{ gfw_status }}</p>
 
 <input type="button" class="btn_funcs" id="of_on_gfw" value="开&关学生端根服务" onclick="doget_use_func_with_wait('gfw')">
